# LearnOpenGL

./: CMakeLists.txt  README.md
include/: shader.h
include/glad/: glad.h
shader_scripts/: square.fs  square.vs
src/: opengl.cpp  opengl_shaders.cpp
src/glad/: glad.c
src/utils/: shader.cpp
